# Fark

./: README.md
actix-example/: Cargo.toml
actix-example/src/: main.rs
fark/: Cargo.toml
fark-actix/: Cargo.toml
fark/src/: error.rs  fark.rs  identity.rs  input.rs  jwt.rs  lib copy.rs  lib.rs  strategy.rs  time.rs
fark/tests/: test.rs
