[package]
name = "fark-actix"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.228"
serde_json = "1.0.145"
fark = {path = "../fark", features = ["actix"]}
tokio = { version = "1.48.0", features = ["full"] }
actix-web = "4.12.1"
env_logger = "0.11"
log = "0.4"
futures-util = "0.3.31"
actix-web-lab = "0.24.3"
actix-service = "2.0.3"
