[package]
name = "fark"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
hmac = "0.12.1"
jsonwebtoken = { version = "10.2.0", features = [ "rust_crypto"] }
jwt = "0.16.0"
reqwest = "0.12.26"
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full", "rt-multi-thread", "test-util"] }


[dependencies.actix-web]
version = "4.12.1"
optional = true

[features]
actix = ["dep:actix-web"]